# weekly-wrapped-newsletter-backend

./: .dockerignore  .env.example  .env.template  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DESIGN.md  Dockerfile  ENDPOINTS.md  MIGRATION_SUMMARY.md  PROJECT_COMPARISON.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  alembic.ini  archive_endpoints_queue.md  archive_watch_history_analytics_spec.md  deploy.sh  docker-compose.yml  flow.md  gunicorn_conf.py  items.csv  manual_enqueue.py  nginx.conf.example  pyproject.toml  result.txt  watch_history_behaviors.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_device_emails_and_auth_job_tracking.py  0003_device_emails_waitlist.py  0004_expand_alembic_version.py  0005_device_emails_referral.py  0006_app_auth_jobs_ip.py  0007_app_auth_jobs_redirect_clicks.py  0008_weekly_report.py  0009_weekly_report_period_dates.py  0010_weekly_report_global.py  0011_weekly_report_summary_snapshot.py  0011_weekly_trend_tables.py  0012_tiktok_radar_header_config.py  0013_tiktok_radar_typed_headers.py  0014_weekly_trend_period_dates.py
app/: accessories.py  admin_metrics.py  db.py  emailer.py  errors.py  main.py  models.py  observability.py  prompts.py  prompts_update.py  schemas.py  settings.py  worker.py
app/routers/: upload.py  weekly_report.py
app/services/: archive_client.py  job_queue.py  session_service.py  (+3 more)
docs/: admin-dashboard-data-model.md  archive_curls.txt  db-reset.md  email-tasks.md  tiktok-creative-radar.md
scripts/: admin_test_pipeline.py  refresh_tiktok_creative_radar_headers.py
